--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cybros Labs Technology Company</title>
+  <link rel="icon" type="image/png" href="./favico.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
@@ -43,6 +44,19 @@
       text-decoration: none;
     }
 
+    footer {
+  position: absolute;
+  bottom: 1rem;
+  width: 100%;
+  text-align: center;
+}
+
+footer p {
+  font-size: 0.6rem;
+  color: #999;
+  margin: 0;
+}
+
     .social-media a:hover {
       color: #999;
     }
@@ -71,6 +85,12 @@
     <a href="https://www.notion.so/Team-Wiki-b0721a1eee69421991f199f574b26768?pvs=4" target="_blank" rel="noopener noreferrer">
         <i class="fas fa-book"></i>
       </a>
+      <a href="mailto:info@cybroslabs.com" target="_blank" rel="noopener noreferrer">
+        <i class="fas fa-envelope"></i>
+      </a>
   </div>
+  <footer>
+    <p>part of ctbf partners</p>
+  </footer>
 </body>
 </html>
