docs(privacy.html)

--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,20 @@
         <p>We not collecting any personal data.</p>
         <h3>Permissions</h3>
         <ul>
+
+    <li>BLUETOOTH - Required, for optical probe communication.</li>
+    <li>BLUETOOTH_ADMIN - Required, for optical probe communication.</li>
+    <li>BLUETOOTH_CONNECT - Required, for optical probe communication.</li>
+    <li>BLUETOOTH_SCAN - Required, for searching of BT communication probes.</li>
+    <li>INTERNET - Required, for data synchronization.</li>
+    <li>MANAGE_EXTERNAL_STORAGE - Required, for temporary storing data.</li>
+    <li>MANAGE_USB - Required, for USB probe communication.</li>
+    <li>RECEIVE_BOOT_COMPLETED - Required, for background automatic data synchronization.</li>
+    <li>WAKE_LOCK - Required, to keep device awake during optical probe communication.</li>
+    <li>WRITE_EXTERNAL_STORAGE - Required, for temporary storing data.</li>
+    <li>ACCESS_FINE_LOCATION - Optional, for accessing a device ID.</li>
+    <li>ACCESS_COARSE_LOCATION - Optional, for accessing a device ID.</li>
+    <li>READ_PHONE_STATE - Optional, for accessing a device ID.</li>
         </ul>
     </body>
 </html>
