--- a/new.html
+++ b/new.html
@@ -43,10 +43,7 @@
           <div class="container">
             <div class="bg-img">
               <blockquote>
-                <p>
-                  Design is not just what it looks like and feels like. Design
-                  is how it works.
-                </p>
+                <p>Hmm</p>
                 <div class="author">
                   <img src="./asset/person_1.jpg" alt="Person image" />
                   <cite>Steve Jobs</cite>
@@ -59,11 +56,7 @@
                   Temporibus possimus, aut veniam. Ut minus, possimus quisquam
                   cupiditate magnam nisi pariatur..
                 </p>
-                <a
-                  href="https://preview.colorlib.com/theme/started/#"
-                  class="contact-now"
-                  >Hire Us Now</a
-                >
+                <a href="#" class="contact-now" target="_blank" data-contact-email>Hire Us Now</a>
               </div>
             </div>
           </div>
@@ -111,51 +104,30 @@
           </div>
         </div>
         <div class="site-section" id="work">
-          <div class="container">
+          <div class="container">       
             <div class="half d-md-flex d-block align-items-stretch">
-              <a
-                href="https://preview.colorlib.com/theme/started/single.html"
-                class="img"
-                style="background-image: url('asset/work_1.jpg')"
-              >
-              </a>
+              <div class="half-content img" style="background-image: url('asset/work_1.jpg')"></div>
               <div class="half-content align-self-center">
-                <h3>kMix Design</h3>
+                <h3>Energetická data rychle a bezpečně</h3>
+                <p>Návrh řešení, nasazení, kooerdinace integrací.</p>
+                <p>Nasazení systému pro dálkový sběr energetických dat.</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                  cupiditate magnam nisi pariatur..
+                  <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
+                  <strong>Klient:</strong> Transelectrica, Rumunsko<br />
+                  <strong>Datum:</strong> 2023
                 </p>
-                <p>
-                  <strong>Client:</strong> JUVINLE Corp. <br />
-                  <strong>Date:</strong> 2020
-                </p>
-                <a href="https://preview.colorlib.com/theme/started/single.html"
-                  >View Case Study</a
-                >
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch">
-              <a
-                href="https://preview.colorlib.com/theme/started/single.html"
-                class="img order-md-2"
-                style="background-image: url('asset/work_2.jpg')"
-              >
-              </a>
+              <div class="half-content img order-md-2" style="background-image: url('asset/work_2.jpg')"></div>
               <div class="half-content align-self-center">
-                <h3>Dieter Rams</h3>
+                <h3>Energetická data v mobilu</h3>
+                <p>Navrh, implementace, realizace</p>
+                <p>Realizace aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                  cupiditate magnam nisi pariatur..
+                  <strong>Technologie:</strong> .NET MAUI<br />
+                  <strong>Klient:</strong> E.GD CZ, PRE a.s. a další<br />
                 </p>
-                <p>
-                  <strong>Client:</strong> XYZ Inc. <br />
-                  <strong>Date:</strong> 2019
-                </p>
-                <a href="https://preview.colorlib.com/theme/started/single.html"
-                  >View Case Study</a
-                >
               </div>
             </div>
           </div>
@@ -237,27 +209,27 @@
                 <h3>Najdete nás</h3>
                 <ul class="list-unstyled social">
                   <li>
-                    <a href="https://preview.colorlib.com/theme/started/#"
+                    <a href="#"
                       ><span class="mr-2 icon-facebook"></span> Facebook</a
                     >
                   </li>
                   <li>
-                    <a href="https://preview.colorlib.com/theme/started/#"
+                    <a href="#"
                       ><span class="mr-2 icon-twitter"></span> Twitter</a
                     >
                   </li>
                   <li>
-                    <a href="https://preview.colorlib.com/theme/started/#"
+                    <a href="#"
                       ><span class="mr-2 icon-instagram"></span> Instagram</a
                     >
                   </li>
                   <li>
-                    <a href="https://preview.colorlib.com/theme/started/#"
+                    <a href="#"
                       ><span class="mr-2 icon-linkedin"></span> Linkedin</a
                     >
                   </li>
                   <li>
-                    <a href="https://preview.colorlib.com/theme/started/#"
+                    <a href="#"
                       ><span class="mr-2 icon-play"></span> Youtube</a
                     >
                   </li>
@@ -274,5 +246,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="./asset/main.js" />
   </body>
 </html>
