--- a/index.html
+++ b/index.html
@@ -1,96 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cybros Labs Technology Company</title>
-  <link rel="icon" type="image/png" href="./favico.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-  <style>
-    body {
-      font-family: 'Comfortaa', cursive;
-      background-color: #f0f0f0;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      flex-direction: column;
-    }
-
-    img {
-      max-width: 200px;
-      width: 100%;
-    }
-
-    h1 {
-      font-size: 1rem;
-      margin: 1rem;
-      color: #717171;
-      text-align: center;
-    }
-
-    .social-media {
-      display: flex;
-      justify-content: center;
-    }
-
-    .social-media a {
-      color: #333;
-      margin: 0 0.5rem;
-      text-decoration: none;
-    }
-
-    footer {
-  position: absolute;
-  bottom: 1rem;
-  width: 100%;
-  text-align: center;
-}
-
-footer p {
-  font-size: 0.6rem;
-  color: #999;
-  margin: 0;
-}
-
-    .social-media a:hover {
-      color: #999;
-    }
-
-    @media screen and (min-width: 768px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      img {
-        max-width: 400px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <img src="./brandmark-design.svg" alt="Cybros Labs Technology Company Logo">
-  <h1>imagine it redefined ...</h1>
-  <div class="social-media">
-    <a href="https://www.linkedin.com/company/cybros-labs" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    <a href="https://github.com/cybroslabs" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-github"></i>
-      </a>
-    <a href="https://www.notion.so/Team-Wiki-b0721a1eee69421991f199f574b26768?pvs=4" target="_blank" rel="noopener noreferrer">
-        <i class="fas fa-book"></i>
-      </a>
-      <a href="mailto:info@cybroslabs.com" target="_blank" rel="noopener noreferrer">
-        <i class="fas fa-envelope"></i>
-      </a>
-  </div>
-  <footer>
-    <p>part of ctbf partners</p>
-  </footer>
-</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Cybros Labs technology company</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/270f769710.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/main.css" />
+  </head>
+  <body>
+    <div class="site-wrap id="top">
+      <div class="container">
+        <div class="row no-gutters site-navbar align-items-center py-3">
+          <div class="col-6 col-lg-2 site-logo">
+            <a href="/index.html"><img src="asset/images/logo_colors_complete.svg" /></a>
+          </div>
+          <div class="col-6 col-lg-10 text-right menu text-end">
+            <nav class="site-navigation text-right text-md-right">
+              <ul class="site-menu js-clone-nav d-none d-lg-block">
+                <li>
+                  <a href="#top">Home</a>
+                </li>
+                <li>
+                  <a href="#services">Služby</a>
+                </li>
+                <li>
+                  <a href="#refs">Reference</a>
+                </li>
+                <li>
+                  <a href="#contact">Kontakt</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <main>
+        <div class="site-hero">
+          <div class="container">
+            <div class="bg-img">
+              <blockquote>
+                <p>Hmm</p>
+                <div class="author">
+                  <img src="/asset/person_1.jpg" alt="Person image" />
+                  <cite>Steve Jobs</cite>
+                </div>
+              </blockquote>
+              <div class="cta-box">
+                <h2>We're Ready To Help & Solve</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Temporibus possimus, aut veniam. Ut minus, possimus quisquam
+                  cupiditate magnam nisi pariatur..
+                </p>
+                <a href="#" class="contact-now" target="_blank" data-contact-email>Hire Us Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="site-section" id="services">
+          <div class="container">
+            <div class="row">
+              <div class="col-6 col-md-6 col-lg-4 service">
+                <i class="fa-solid fa-pen-fancy"></i>
+                <h3>Design & Architektura</h3>
+                <p>Navrhneme s vámi koncept řešení.</p>
+                <ul class="list-unstyled services-list">
+                  <li>Angular</li>
+                  <li>React</li>
+                  <li>ASP.NET</li>
+                </ul>
+              </div>
+              <div class="col-6 col-md-6 col-lg-4 service">
+                <i class="fa-solid fa-gears"></i>
+                <h3>DevOps</h3>
+                <p>Pomůžeme vám s implementací Kubernetes clusterů.</p>
+                <ul class="list-unstyled services-list">
+                  <li>Kubernetes</li>
+                  <li>Automatizace</li>
+                </ul>
+              </div>
+              <div class="col-6 col-md-6 col-lg-4 service">
+                <i class="fa-solid fa-mobile-screen"></i>
+                <h3>Mobile Applications</h3>
+                <p>
+                  Pomůžeme vám navrhnout a realizovat mobilní aplikaci běžící
+                  na různých moderních mobilních zařízeních.
+                </p>
+                <ul class="list-unstyled services-list">
+                  <li>.NET MAUI</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="site-section" id="work">
+          <div class="container">
+            <div class="half d-md-flex d-block align-items-stretch" data-aos="fade-right">
+              <div class="half-content img" style="background-size: 30%; background-image: url('asset/images/ro_transelectrica.png')"></div>
+              <div class="half-content align-self-center">
+                <h3>Energetická data rychle a bezpečně</h3>
+                <p>Návrh řešení, nasazení, kooerdinace integrací.</p>
+                <p>Nasazení systému pro dálkový sběr energetických dat.</p>
+                <p>
+                  <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
+                  <strong>Klient:</strong> Transelectrica, Rumunsko<br />
+                  <strong>Datum:</strong> 2023
+                </p>
+              </div>
+            </div>
+            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+              <div class="half-content img order-md-2" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
+              <div class="half-content align-self-center">
+                <h3>Energetická data v mobilu</h3>
+                <p>Navrh, implementace, realizace</p>
+                <p>Realizace aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
+                <p>
+                  <strong>Technologie:</strong> .NET MAUI<br />
+                  <strong>Klient:</strong> E.GD CZ, PRE a.s. a další<br />
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="site-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-6 col-md-6 col-lg-6">
+                <div class="testimonial">
+                  <img
+                    src="/asset/person_1.jpg"
+                    alt="Image"
+                    class="img-fluid"
+                  />
+                  <div class="mb-3">
+                    <h3>Dalibor Janckulík</h3>
+                    <span>Founder</span>
+                  </div>
+                  <blockquote>
+                    “Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Temporibus possimus, aut veniam. Ut minus, possimus quisquam
+                    cupiditate magnam nisi pariatur..”
+                  </blockquote>
+                </div>
+              </div>
+              <div class="col-6 col-md-6 col-lg-6">
+                <div class="testimonial">
+                  <img
+                    src="/asset/person_2.jpg"
+                    alt="Image"
+                    class="img-fluid"
+                  />
+                  <div class="mb-3">
+                    <h3>Ladislav Čapka</h3>
+                    <span>Co-Founder</span>
+                  </div>
+                  <blockquote>
+                    “Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Temporibus possimus, aut veniam. Ut minus, possimus quisquam
+                    cupiditate magnam nisi pariatur..”
+                  </blockquote>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <div class="footer">
+        <div class="container">
+          <div class="row" id="contact">
+            <div class="col-lg-6">
+              <div class="widget mb-4">
+                <h3>O nás</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Accusantium vitae aliquam quia beatae necessitatibus omnis
+                  nisi, maxime tempora neque et!
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="widget mb-4">
+                <h3>Najdete nás</h3>
+                <p>
+                  Smíchov Business Park a.s.<br />
+                  Strakonická 3367<br />
+                  150 00 Praha 5<br />
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="widget mb-4">
+                <h3>Více</h3>
+                <ul class="list-unstyled links">
+                  <li>
+                    <a href="#services">Služby</a>
+                  </li>
+                  <li>
+                    <a href="#refs">Reference</a>
+                  </li>
+                  <li>
+                    <a href="#contact">Kontakt</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="row footer-inner">            
+            <div class="col-12 mt-5 text-center copyright">
+              <p>Cybroslabs 2023</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/asset/main.js"></script>
+    <script>AOS.init();</script>
+  </body>
 </html>
