docs: logos and more

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="#services">Služby</a>
                 </li>
                 <li>
-                  <a href="#refs">Reference</a>
+                  <a href="#work">Reference</a>
                 </li>
                 <li>
                   <a href="#contact">Kontakt</a>
@@ -110,16 +110,43 @@
         </div>
         <div class="site-section" id="work">
           <div class="container">
-            <div class="half d-md-flex d-block align-items-stretch" data-aos="fade-right">
-              <div class="half-content img" style="background-size: 30%; background-image: url('asset/images/ro_transelectrica.png')"></div>
+            <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
+              <div class="half-content img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energetická data rychle a bezpečně</h3>
-                <p>Návrh řešení, nasazení, kooerdinace integrací.</p>
-                <p>Nasazení systému pro dálkový sběr energetických dat.</p>
+                <p>Návrh řešení, nasazení, koordinace integrací</p>
+                <p>Nasazení systému pro dálkový sběr energetických dat včetně podpory monitoringu a realizace integrací s dalšími energetickými systémy.</p>
                 <p>
                   <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
                   <strong>Klient:</strong> Transelectrica, Rumunsko<br />
                   <strong>Datum:</strong> 2023
+                </p>
+              </div>
+            </div>
+            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+              <div class="half-content img order-md-2" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
+              <div class="half-content align-self-center">
+                <h3>Softwarový systém pro rozvozní společnost</h3>
+                <p>Navrh, realizace, provoz</p>
+                <p>Kompletní realizace systému pro plánování a řízení společnosti rozváženící zboží.</p>
+                <p>
+                  <strong>Technologie:</strong> ASP.NET, PostgreSql<br />
+                  <strong>Platforma:</strong> Kubernetes<br />
+                  <strong>Klient:</strong> delivrium s.r.o.<br />
+                  <strong>Datum:</strong> 2023 (probíhá)
+                </p>
+              </div>
+            </div>
+            <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
+              <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
+              <div class="half-content align-self-center">
+                <h3>Komeční Banka</h3>
+                <p>Vývoj</p>
+                <p>Pomoc</p>
+                <p>
+                  <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
+                  <strong>Klient:</strong> Transelectrica, Rumunsko<br />
+                  <strong>Datum:</strong> 2021 (probíhá)
                 </p>
               </div>
             </div>
@@ -131,6 +158,7 @@
                 <p>Realizace aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
                 <p>
                   <strong>Technologie:</strong> .NET MAUI<br />
+                  <strong>Platforma:</strong> Android, iOS<br />
                   <strong>Klient:</strong> E.GD CZ, PRE a.s. a další<br />
                 </p>
               </div>
