docs: more refs

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <p>Nasazení systému pro dálkový sběr energetických dat včetně podpory monitoringu a realizace integrací s dalšími energetickými systémy.</p>
                 <p>
                   <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
-                  <strong>Klient:</strong> Transelectrica, Rumunsko<br />
+                  <strong>Klient:</strong> Transelectrica, RO<br />
                   <strong>Datum:</strong> 2023
                 </p>
               </div>
@@ -132,7 +132,7 @@
                 <p>
                   <strong>Technologie:</strong> ASP.NET, PostgreSql<br />
                   <strong>Platforma:</strong> Kubernetes<br />
-                  <strong>Klient:</strong> delivrium s.r.o.<br />
+                  <strong>Klient:</strong> delivrium s.r.o., CZ<br />
                   <strong>Datum:</strong> 2023 (probíhá)
                 </p>
               </div>
@@ -140,12 +140,12 @@
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
               <div class="half-content align-self-center">
-                <h3>Komeční Banka</h3>
-                <p>Vývoj</p>
+                <h3>X</h3>
+                <p>Mávrh, vývoj</p>
                 <p>Pomoc</p>
                 <p>
                   <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
-                  <strong>Klient:</strong> Transelectrica, Rumunsko<br />
+                  <strong>Klient:</strong> Komeční Banka a.s., CZ<br />
                   <strong>Datum:</strong> 2021 (probíhá)
                 </p>
               </div>
@@ -159,7 +159,7 @@
                 <p>
                   <strong>Technologie:</strong> .NET MAUI<br />
                   <strong>Platforma:</strong> Android, iOS<br />
-                  <strong>Klient:</strong> E.GD CZ, PRE a.s. a další<br />
+                  <strong>Klient:</strong> EG.D, a.s., Pražská energetika, a. s. a další<br />
                 </p>
               </div>
             </div>
