docs: more refs

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
               <div class="half-content align-self-center">
-                <h3>X</h3>
-                <p>Mávrh, vývoj</p>
-                <p>Pomoc</p>
+                <h3>Front-end interního systému</h3>
+                <p>Návrh, vývoj</p>
+                <p>Návrh interní webové aplikace a realizace front-end části.</p>
                 <p>
-                  <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
+                  <strong>Technologie:</strong> Angular<br />
                   <strong>Klient:</strong> Komeční Banka a.s., CZ<br />
                   <strong>Datum:</strong> 2021 (probíhá)
                 </p>
@@ -155,7 +155,7 @@
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
-                <p>Realizace aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
+                <p>Vývoj aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
                 <p>
                   <strong>Technologie:</strong> .NET MAUI<br />
                   <strong>Platforma:</strong> Android, iOS<br />
