--- a/index.html
+++ b/index.html
@@ -255,6 +255,21 @@
           <div class="row footer-inner">            
             <div class="col-12 text-center copyright">
               <p>&copy; Cybroslabs 2023</p>
+<!--
+                <a href="https://www.linkedin.com/company/cybros-labs" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+                <a href="https://github.com/cybroslabs" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                <a href="https://www.notion.so/Team-Wiki-b0721a1eee69421991f199f574b26768?pvs=4" target="_blank">
+                    <i class="fas fa-book"></i>
+                  </a>
+                  <a href="#" target="_blank" data-contact-email>
+                    <i class="fas fa-envelope"></i>
+                  </a>
+              </div>
+-->
             </div>
           </div>
         </div>
