docs: more texts

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
             <nav class="site-navigation text-right text-md-right">
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li>
-                  <a href="#top">Home</a>
-                </li>
-                <li>
                   <a href="#services">Služby</a>
                 </li>
                 <li>
@@ -51,11 +48,9 @@
                 </div>
               </blockquote -->
               <div class="cta-box">
-                <h2>We're Ready To Help & Solve</h2>
+                <h2>Spolu k cíli</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                  cupiditate magnam nisi pariatur..
+                  Specializujeme na pokročilé softwarové návrhy, včetně big data, Kubernetes a automatizace. S hlubokým know-how přinášíme efektivní řešení pro naše klienty. Napište nám a pojďme společně realizovat vaše ambice.
                 </p>
                 <a href="#" class="contact-now" target="_blank" data-contact-email>Napiště nám</a>
               </div>
@@ -68,7 +63,7 @@
               <div class="col-md-3 service">
                 <i class="fa-solid fa-pen-fancy"></i>
                 <h3>Design & Architektura</h3>
-                <p>Navrhneme s vámi koncept řešení.</p>
+                <p>Spojujeme kreativitu a technologie pro optimální řešení v oblasti Designu a Architektury. Vytváříme uživatelsky přívětivé aplikace a zajistíme efektivní správu databází. Společně s vámi navrhujeme a realizujeme koncept řešení, bez ohledu na velikost projektu.</p>
                 <ul class="list-unstyled services-list">
                   <li>Angular/React</li>
                   <li>ASP.NET</li>
@@ -78,10 +73,7 @@
               <div class="col-md-3 service">
                 <i class="fa-solid fa-mobile-screen"></i>
                 <h3>Mobilní Aplikace</h3>
-                <p>
-                  Pomůžeme vám navrhnout a realizovat mobilní aplikaci běžící
-                  na různých moderních mobilních zařízeních.
-                </p>
+                <p>Váš partner v oblasti Mobilních Aplikací, poskytující služby od návrhu po realizaci. Pomůžeme vám vytvořit inovativní mobilní aplikaci pro různá zařízení, využívající moderní technologie, včetně .NET MAUI, a zajistíme, aby splňovala očekávání uživatelů.</p>
                 <ul class="list-unstyled services-list">
                   <li>.NET MAUI</li>
                 </ul>
@@ -89,7 +81,7 @@
               <div class="col-md-3 service">
                 <i class="fa-solid fa-gears"></i>
                 <h3>DevOps</h3>
-                <p>Pomůžeme vám s implementací Kubernetes clusterů.</p>
+                <p>Poskytujeme Vám komplexní podporu při implementaci Kubernetes clusterů a automatizaci procesů. S naším know-how v oblasti Kubernetes zajišťujeme efektivní a škálovatelná řešení pro správu aplikací a infrastruktury. Naše automatizační služby optimalizují procesy, což vede ke zrychlení vývoje a zlepšení celkového výkonu.</p>
                 <ul class="list-unstyled services-list">
                   <li>Kubernetes</li>
                   <li>Automatizace</li>
@@ -98,11 +90,10 @@
               <div class="col-md-3 service">
                 <i class="fa-solid fa-mobile-screen"></i>
                 <h3>Infrastruktura</h3>
-                <p>
-                  Pomůžeme vám navrhnout infrastrukturu pro potřeby vašich aplikací.
-                </p>
+                <p>Asistujeme Vám při návrhu infrastruktury pro optimální podporu vašich aplikací. Specializujeme se na vysokou dostupnost a distribuované systémy, zajistíme efektivní a plně přizpůsobenou infrastrukturu. S naším přístupem získáte pevný základ pro spolehlivý provoz a maximalizaci výkonu.</p>
                 <ul class="list-unstyled services-list">
-                  <li>?</li>
+                  <li>Vysoká dostupnost</li>
+                  <li>Distribuované systémy</li>
                 </ul>
               </div>
             </div>
@@ -115,7 +106,7 @@
               <div class="half-content align-self-center">
                 <h3>Energetická data rychle a bezpečně</h3>
                 <p>Návrh řešení, nasazení, koordinace integrací</p>
-                <p>Nasazení systému pro dálkový sběr energetických dat včetně podpory monitoringu a realizace integrací s dalšími energetickými systémy.</p>
+                <p>Realizovali jsme nasazení systému pro dálkový sběr energetických dat s podporou monitoringu a úspěšně integrovali tuto technologii s dalšími energetickými systémy. Naše klíčové technologické prvky zahrnují RKE2, PostgreSql a Converge 4, které jsme implementovali s důrazem na rychlost, bezpečnost a spolehlivost.</p>
                 <p>
                   <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
                   <strong>Klient:</strong> Transelectrica, RO<br />
@@ -126,9 +117,9 @@
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
               <div class="half-content img order-md-2" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
-                <h3>Softwarový systém pro rozvozní společnost</h3>
+                <h3>Systém pro rozvozní společnost</h3>
                 <p>Navrh, realizace, provoz</p>
-                <p>Kompletní realizace systému pro plánování a řízení společnosti rozváženící zboží.</p>
+                <p>Vytváříme systém pro plánování a řízení rozvozu zboží. Tato realizace poskytuje společnosti efektivní nástroj k optimalizaci a sledování distribučních procesů. Jsme rádi, že jsme mohli přispět k operativní efektivitě klienta v oblasti rozvozu zboží.</p>
                 <p>
                   <strong>Technologie:</strong> ASP.NET, PostgreSql<br />
                   <strong>Platforma:</strong> Kubernetes<br />
@@ -142,7 +133,7 @@
               <div class="half-content align-self-center">
                 <h3>Front-end interního systému</h3>
                 <p>Návrh, vývoj</p>
-                <p>Návrh interní webové aplikace a realizace front-end části.</p>
+                <p>Provádíme návrh interní webové aplikace a zajišťujeme realizaci její front-end části. Naše práce spočívala ve vytvoření uživatelsky přívětivého rozhraní, které plně odpovídá potřebám interních procesů.</p>
                 <p>
                   <strong>Technologie:</strong> Angular<br />
                   <strong>Klient:</strong> Komeční Banka a.s., CZ<br />
@@ -155,7 +146,7 @@
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
-                <p>Vývoj aplikace pro práci s elektroměry pro mobilní telefony s OS Android a iOS.</p>
+                <p>Zajišťujeme jsme kompletní proces od návrhu po realizaci pro vývoj mobilní aplikace určené k práci s energetickými daty. Naši specialisté se zaměřili na efektivní návrh a implementaci aplikace, která umožňuje snadnou práci s elektroměry na mobilních telefonech s operačními systémy Android a iOS. Cílem bylo poskytnout uživatelsky přívětivý a funkční nástroj pro manipulaci s energetickými daty na mobilních zařízeních.</p>
                 <p>
                   <strong>Technologie:</strong> .NET MAUI<br />
                   <strong>Platforma:</strong> Android, iOS<br />
@@ -176,9 +167,8 @@
                     <span>Founder</span>
                   </div>
                   <blockquote>
-                    “Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                    cupiditate magnam nisi pariatur..”
+                    &OpenCurlyDoubleQuote;
+                    &CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
@@ -190,9 +180,10 @@
                     <span>Co-Founder</span>
                   </div>
                   <blockquote>
-                    “Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                    cupiditate magnam nisi pariatur..”
+                    <!-- 
+                    &OpenCurlyDoubleQuote;Meet our Co-Owner, a visionary leader with a rich background in R&D management and solution architecture. As a driving force behind our software development company, they've led groundbreaking projects, from refining the Converge head-end system to pioneering automated CI/CD pipelines. Proficient in Python, C, .NET C#, and more, their technical prowess is matched by an unwavering commitment to innovation. Beyond their stellar career, their extroverted personality, leadership in Toastmasters, and achievements in Taijiquan embody a holistic approach to success. Join us in shaping the future of technology under their dynamic leadership.&CloseCurlyDoubleQuote;
+                    -->
+                    &OpenCurlyDoubleQuote;Zkušený vizionář v oblasti výzkumu, vývoje a architektury, který vedl klíčové projekty od zdokonalení systému Converge head-end po průkopnickou automatizaci CI/CD pipelines. Jeho odbornost a vášeň pro inovace jsou doplněny neochvějným závazkem.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
@@ -204,9 +195,8 @@
                     <span>Visionary</span>
                   </div>
                   <blockquote>
-                    “Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Temporibus possimus, aut veniam. Ut minus, possimus quisquam
-                    cupiditate magnam nisi pariatur..”
+                    &OpenCurlyDoubleQuote;
+                    &CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
@@ -221,9 +211,7 @@
               <div class="widget mb-4">
                 <h3>O nás</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusantium vitae aliquam quia beatae necessitatibus omnis
-                  nisi, maxime tempora neque et!
+                  Spojujeme kreativitu a technologie pro optimální řešení v oblasti designu a architektury aplikací, devops, infrastruktury. Vytváříme uživatelsky přívětivá řešení, realizujeme koncepty bez ohledu na velikost projektu a poskytujeme komplexní služby od návrhu po realizaci. Zaměřujeme se na inovativní technologie a efektivní správu aplikací a infrastruktury, abychom společně s vámi budovali spolehlivé a výkonné IT systémy.
                 </p>
               </div>
             </div>
