--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
-                <p>Zajišťujeme jsme kompletní proces od návrhu po realizaci pro vývoj mobilní aplikace určené k práci s energetickými daty. Naši specialisté se zaměřili na efektivní návrh a implementaci aplikace, která umožňuje snadnou práci s elektroměry na mobilních telefonech s operačními systémy Android a iOS. Cílem bylo poskytnout uživatelsky přívětivý a funkční nástroj pro manipulaci s energetickými daty na mobilních zařízeních.</p>
+                <p>Zajišťujeme kompletní proces od návrhu po realizaci pro vývoj mobilní aplikace určené k práci s energetickými daty. Naši specialisté se zaměřili na efektivní návrh a implementaci aplikace, která umožňuje snadnou práci s elektroměry na mobilních telefonech s operačními systémy Android a iOS. Cílem bylo poskytnout uživatelsky přívětivý a funkční nástroj pro manipulaci s energetickými daty na mobilních zařízeních.</p>
                 <p>
                   <strong>Technologie:</strong> .NET MAUI<br />
                   <strong>Platforma:</strong> Android, iOS<br />
